assets/style.css
/* ----- html elements ----- */

html {
    font-family: 'Pavanam', sans-serif;
    font-size: 1.5em;
}

input, button {
    font-family: 'Pavanam', sans-serif;
    font-size: 1em;
}

body {
    background-color: #f5f5f0;
    padding: 0;
    margin: 0;
}

input {
    padding: 0 5px;
}

div, ul, form {
    /*border: 1px #000 dashed;*/
}

/* ----- utility classes ----- */

.simple-list {
    list-style-type: none;
    padding: 0;
    margin: 0;
}

.horizontal-list {
    display: block;
    list-style-type: none;
    padding: 0;
    margin: 0;
}

.horizontal-list li {
    display: inline-block;
    padding: 0;
    margin: 0;
}

.bordered-list li:after {
    content: '\2218';
    padding: 0 5px;
}

.bordered-list li:last-child:after {
    content: '';
    padding: 0;
}

.centered {
    text-align: center;
}

.clearfix:after {
   content: ".";
   visibility: hidden;
   display: block;
   height: 0;
   clear: both;
}

.popout {
    background-color: #fff;
    border: 1px #000 solid;
    margin-right: 20px;
    padding: 10px;
    box-shadow: 0 10px 30px rgba(0,0,0,0.3);
    border-radius: 6px;
}

/* ----- structural elements ----- */

.content {
    width: 1200px;
    margin: 0 auto;
    padding: 20px;
}

.site-title {
    display: block;
    text-align: center;
    padding: 0;
    margin: 0 auto 20px auto;
}

.menu {
    text-align: center;
    font-family: "Amatic SC", cursive;
    font-weight: bold;
    font-size: 2em;
    border-top: 2px #000 solid;
    border-bottom: 2px #000 solid;
    margin-bottom: 20px;
}

.menu a {
    text-decoration: none;
    color: #000;
}

.social-links {
    text-align: center;
}

.social-links img {
    width: 30px;
    height: 30px;
}

img.header {
    display: block;
    text-align: center;
    width: 1200px;
    margin: 20px auto 20px auto;
    border: 1px #000 solid;
}

.newsletter {
    display: block;
    text-align: center;
    font-size: 75%;
    padding: 10px 50px;
    margin: 10px 0;
    border-top: 2px #000 solid;
    border-bottom: 2px #000 solid;
    line-height: 40px;
}

.newsletter label {
    font-family: 'Open Sans Condensed', sans-serif;
    font-size: 125%;
    font-weight: bold;
    letter-spacing: 1px;
    vertical-align: middle;
}

.newsletter button {
    cursor: pointer;
    margin-left: 10px;
    padding: 5px 10px;
    vertical-align: middle;
    color: #000;
    background-color: #fff;
    border-radius: 10px;
    border: 2px #000 solid;
    text-decoration: none;
}

.newsletter button:hover {
    background-color: #eee;
}

.legal {
    text-align: center;
    font-size: 50%;
}

.home .intent {
    margin: 20px 0 5px 0;
    font-size: 200%;
    font-family: "Amatic SC", cursive;
    text-align: center;
    font-weight: bold;
}

.home .column {
    display: block;
    float: left;
    text-align: center;
    margin: 20px 0 0 0;
    text-decoration: none;
    padding: 0;
    color: #000;
    font-weight: bold;
}

.home .column:first-child {
    margin-left: 0;
    margin-right: 19px;
}

.home .column:last-child {
    margin-right: 0;
    margin-left: 19px;
}

.home img {
    border: 1px #000 solid;
    box-shadow: 0 10px 30px rgba(0,0,0,0.3);
}

.home img.borderless {
    border: 0;
    box-shadow: none;
}

.home span {
    display: block;
    font-family: "Open Sans Condensed", sans-serif;
    font-size: 125%;
    margin: -5px 0 5px 0;
    padding: 0;
}

.about .photos {
    float: left;
}

.about .photos img {
    width: 200px;
    margin-bottom: 20px;
}

.about .moments {
    margin-left: 220px;
}

.about .moments .date {
    font-weight: bold;
}

.journal .navigation {
    display: inline-block;
    width: 250px;
    vertical-align: top;
}

.journal .navigation .header  {
    display: inline-block;
    font-family: 'Amatic SC', cursive;
    font-size: 125%;
    font-weight: bold;
    letter-spacing: 1px;
    border-bottom: 1px #000 solid;
    margin-bottom: 5px;
}

.journal .navigation .categories > li {
    margin-top: 20px;
}

.journal .navigation .categories > li:first-child {
    margin-top: 0;
}

.journal .navigation a {
    font-family: 'Open Sans Condensed', sans-serif;
    text-decoration: none;
}

.journal .navigation a:before {
    content: '\2218';
    padding-right: 5px;
}

.journal .navigation a:hover {
    font-weight: bold;
}

.journal .posts {
    display: inline-block;
    width: 945px;
}

.journal .post {
    border: 1px #000 solid;
    box-shadow: 0 10px 30px rgba(0,0,0,0.3);
    border-radius: 6px;
    padding: 20px;
    margin-bottom: 30px;
    background-color: #ffffff;
}

.journal .post .header {
    display: block;
    font-family: "Amatic SC", cursive;
    letter-spacing: 2px;
    color: #000;
}

.journal .post .title {
    display: inline-block;
    width: 75%;
    font-weight: 700;
    font-size: 200%;
}

.journal .post .date {
    display: inline-block;
    width: 24%;
    text-align: right;
    font-size: 150%;
}

.journal .post .tags {
    font-family: 'Open Sans Condensed', sans-serif;
    font-size: 80%;
    margin-right: 10px;
}

.journal .post .image {
    width: 100%;
    margin-top: 25px;
}

.cool-stuff {
    margin: 20px 0 30px 0;
}

.cool-stuff .topic {
    margin: 20px 0;
}

.cool-stuff .header {
    font-family: "Amatic SC", cursive;
    font-size: 175%;
    font-weight: bold;
    display: block;
    text-align: center;
    overflow: hidden;
    white-space: nowrap;
    margin-bottom: 20px;
}

.cool-stuff .header > span {
    position: relative;
    display: inline-block;
}

.cool-stuff .header > span:before,
.cool-stuff .header > span:after {
    content: "";
    position: absolute;
    top: 50%;
    width: 9999px;
    height: 2px;
    background: black;
}

.cool-stuff .header > span:before {
    right: 100%;
    margin-right: 15px;
}

.cool-stuff .header > span:after {
    left: 100%;
    margin-left: 15px;
}

.cool-stuff .topic img {
    width: 600px;
    height: 300px;
    border: 1px #000 solid;
    box-shadow: 0 10px 30px rgba(0,0,0,0.3);
}

.cool-stuff .topic a {
    text-decoration: none;
}

.cool-stuff .topic .item {
    padding: 0 20px 20px 20px;
}

.cool-stuff .topic .item .description {
    display: block;
    font-size: 75%;
}

.cool-stuff .align-left      { text-align: left; clear: both; }
.cool-stuff .align-left ul   { margin-left: 600px; }
.cool-stuff .align-left img  { float: left; }
.cool-stuff .align-left a    { clear: left; }
.cool-stuff .align-right     { text-align: right; clear: both; }
.cool-stuff .align-right ul  { margin-right: 600px; }
.cool-stuff .align-right img { float: right; }
.cool-stuff .align-right a   { clear: right; }

.whats-coming {
    position: relative;
    margin: 20px 0;
}

.empty,
.whats-coming .no-items {
    text-align: center;
    font-size: 180%;
    font-family: "Open Sans Condensed", sans-serif;
}

.whats-coming .intent {
    position: absolute;
    width: 364px;
    text-align: center;
    margin: 0 408px;
    padding-top: 25px;
    font-size: 180%;
    font-family: "Open Sans Condensed", sans-serif;
    clear: both;
}

.whats-coming .item {
    float: left;
    margin-right: 20px;
    margin-bottom: 20px;
    padding: 0;
    border: 1px #000 solid;
    box-shadow: 0 10px 30px rgba(0,0,0,0.3);
}

.whats-coming .item:nth-child(3) {
    margin-left: 406px;
}

.whats-coming .item:nth-child(3n) {
    margin-right: 0;
}

.whats-coming .intent,
.whats-coming .item,
.whats-coming .item img {
    width: 384px;
    height: 288px;
}

.book {
    margin-bottom: 40px;
}

.book .excerpt {
    margin: 0 20px;
    padding: 0 20px;
    font-style: italic;
    border: 1px #000 solid;
    box-shadow: 0 10px 30px rgba(0,0,0,0.3);
    background-color: #ffffff;
    border-radius: 6px;
}

